# rules_cpp23_modules

./: .bazelignore  .bazelrc  .gitignore  MODULE.bazel  README.md  WORKSPACE
cc_module/: defs.bzl
cc_module/private/: cc_compiled_module.bzl  cc_module.bzl  cc_module_compile.bzl  cc_module_link.bzl  utility.bzl
demo/hello-world-project/: BUILD  CMakeLists.txt  MODULE.bazel  Makefile  README.md  hello.cppm
demo/simple/: .bazelrc  BUILD  MODULE.bazel  Makefile  README.md  main.cpp  main2.cpp
demo9/hello-world-project/: BUILD  MODULE.bazel  README.md  extensions.bzl  main.cc
demo9/simple/: .bazelrc  BUILD  MODULE.bazel  README.md  main2.cpp
example/hello-world/: BUILD  Makefile  README.md  logs-bazel-8-bazel-9.txt  main.cc
example/module-library/: BUILD  Makefile  README.md  b.cc  main.cc
example/multi_src_module/: BUILD  Makefile  README.md  main.cc  spanish_english_dictionary.cppm  spanish_english_dictionary_impl.cc  speech.cppm  speech_impl.cc
example/simple-auto/: .bazelrc  BUILD  README.md  extensions-exp-UNUSED.bzl
example/template-module/: BUILD  Makefile  README.md  algorithm.cppm  main.cc
example/transitive/: BUILD  Makefile  README.md  a.cppm  b.cppm
util/driver/: BUILD  clang.py  gcc.py
