module(name = "rules_cpp23_modules", version = "0.3.0")
# 0.1.0 used to be ok with clang with bazel 8...
# 0.2.0 now focusing on gcc with bazel 8.
# 0.3.0 now supports AUTOMATED .gcm build for gcc on bazel 8.

bazel_dep(name = "rules_cc", version = "0.2.14")
bazel_dep(name = "rules_python", version = "1.7.0")
bazel_dep(name = "bazel_skylib", version = "1.8.2")
