module(name = "hello_world_project")

# Works for Bazel 9.0.0 but fails for 9.1.0
'''
bazel_dep(name = "rules_cc")
git_override(
    module_name = "rules_cc",
    remote = "https://github.com/PikachuHyA/rules_cc.git",
    branch = "support_std_module",
)
cc_configure = use_extension("@rules_cc//cc:extensions.bzl", "cc_configure_extension")
use_repo(cc_configure, "local_config_cc")
'''


bazel_dep(name = "rules_cc", version = "0.2.17")
local_libcxx = use_extension("//:extensions.bzl", "local_libcxx_extension")
local_libcxx.configure(path = "/usr/lib/llvm-21/share/libc++/v1")
use_repo(local_libcxx, "local_libcxx")

